# beancounters

./: Cargo.toml  LICENSE  README.md  openapi.json  shell.nix
data/: 2026-01.bean  accounts.bean  main.bean
src/: api.rs  beancount.rs  main.rs  model.rs  state.rs
