[package]
name = "beancounters"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
beancount-parser-lima = "0.14.1"
chumsky = "1.0.0-alpha.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
walkdir = "2"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
